Migrate to Java25 except for the catalog modules